deployment/gke/edge-interface/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
  generation: 6
  labels:
    app: edge-interface
  name: edge-interface
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: edge-interface
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: edge-interface
    spec:
      containers:
      - name: edge-interface-xdmbn
        image: europe-west1-docker.pkg.dev/acn-gcp-octo-sas/airbus-test/edge_interface:0.5.1
        imagePullPolicy: IfNotPresent
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        readinessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 30
          periodSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2023-02-17T18:17:48Z"
    lastUpdateTime: "2023-02-17T18:17:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-02-08T17:34:07Z"
    lastUpdateTime: "2023-02-22T09:46:20Z"
    message: ReplicaSet "edge-interface-5bb7d95f8b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
