deployment/gke/edge-interface/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: edge-interface
  name: front-service
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.172.6.248
  clusterIPs:
  - 10.172.6.248
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30997
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: edge-interface
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.187.103.141
