deployment/gke/edge-interface/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: vio-airbus-ip
    networking.gke.io/managed-certificates: viotestlbcertif
spec:
  defaultBackend:
    service:
      name: front-service
      port:
        number: 80
status:
  loadBalancer: {}
